--- a/Romanian/main/ApplicationsProvider.apk/res/values-ro/strings.xml
+++ b/Romanian/main/ApplicationsProvider.apk/res/values-ro/strings.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
-     <string name="app_label">Furnizor aplic. căutare</string>
+     <string name="app_label">Furnizor căutare aplicații</string>
      <string name="application_desc">Aplicaţie</string>
      <string name="search_label">Aplicaţii</string>
      <string name="settings_description">Numele aplicaţiilor instalate</string>
