--- a/Romanian/main/framework-ext-res.apk/res/values-ro/strings.xml
+++ b/Romanian/main/framework-ext-res.apk/res/values-ro/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="activity_package_delete_confirm_title">Atenție</string>
     <string name="add_frequent_phrases">Adăugare expresii frecvente</string>
