--- a/Romanian/main/Calculator.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calculator.apk/res/values-ro/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="app_name">Calculator</string>
     <string name="app_name_danfa">Calculator Mi</string>
@@ -228,7 +228,7 @@
     <string name="tax_unemployment">Șomaj</string>
     <string name="tax_update_time_format">Date furnizate de HeXun (%s)</string>
     <string name="times"/>
-    <string name="title_bar">Convertor pentru măsuri de lungime</string>
+    <string name="title_bar">Convertor măsuri de lungime</string>
     <string name="to_num">62.7</string>
     <string name="unit_data_display_area_acre">Acri</string>
     <string name="unit_data_display_area_are">Ari</string>
