--- a/Romanian/main/CalendarProvider.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CalendarProvider.apk/res/values-ro/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="calendar_default_name">Prestabilit</string>
     <string name="calendar_info">Informaţii despre calendar</string>
@@ -9,16 +9,16 @@
     <string name="calendar_storage">Stocarea calendarului</string>
     <string name="debug_tool_delete_button">Ştergeţi</string>
     <string name="debug_tool_email_body">Vă trimit ataşat baza de date a calendarului, cu toate întâlnirile şi informaţiile mele personale. Vă rog să o gestionaţi cu atenţie.</string>
-    <string name="debug_tool_email_sender_picker">Alegeţi un program pentru a trimite fişierul</string>
+    <string name="debug_tool_email_sender_picker">Alegeţi aplicația pentru a trimite fişierul</string>
     <string name="debug_tool_email_subject">Unealta de reparare a calendarului a fost ataşată</string>
     <string name="debug_tool_message">"Sunteţi pe cale să faceţi o copie a bazei de date a calendarului dvs. pe cardul SD/stocarea USB, care poate fi citită de orice aplicaţie şi să o expediaţi prin e-mail. Amintiţi-vă să ştergeţi copia bazei de date după ce aţi copiat-o de pe respectivul dispozitiv sau aţi primit e-mailul."</string>
     <string name="debug_tool_start_button">Începeţi</string>
     <string name="holiday_data_no_network">"Nicio conexiune de reţea disponibilă, încercaţi din nou mai târziu."</string>
     <string name="holiday_data_update_failed">Actualizare eşuată, încercaţi din nou mai târziu.</string>
     <string name="holiday_data_update_succeed">Actualizare reuşită</string>
-    <string name="holiday_data_updating">Actualizare...</string>
-    <string name="holiday_update_summary">Verificaţi actualizările bazei de date pentru zilele lucrătoare</string>
-    <string name="holiday_update_title">Actualizaţi baza de date</string>
+    <string name="holiday_data_updating">Actualizare…</string>
+    <string name="holiday_update_summary">Atingeți pentru a actualiza informațiile despre calendar</string>
+    <string name="holiday_update_title">Actualizare disponibilă</string>
     <string name="provider_label">Calendar</string>
     <string name="upgrade_msg">"Se actualizează baza de date a calendarului..."</string>
 </resources>
