--- a/Romanian/main/CaptivePortalLogin.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CaptivePortalLogin.apk/res/values-ro/strings.xml
@@ -4,4 +4,7 @@
     <string name="action_do_not_use_network">Nu utilizați această rețea</string>
     <string name="action_use_network">Utilizați rețeaua așa cum este</string>
     <string name="app_name">CaptivePortalLogin</string>
+    <string name="ssl_error_continue">Continuați oricum via browser</string>
+    <string name="ssl_error_example">De exemplu, pagina de logare poate să nu aparțină organizației afișate.</string>
+    <string name="ssl_error_warning">Rețeaua la care încercați să vă conectați are probleme de securitate.</string>
 </resources>
