--- a/Romanian/main/CloudBackup.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CloudBackup.apk/res/values-ro/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="about_to_recover">Doar o secundă…</string>
     <string name="account_error">Eroare cont</string>
@@ -118,7 +118,7 @@ Notă: Datele aplicațiilor instalate nu vor fi salvate în Mi Cloud!"</string>
     <string name="retry">Reîncercaţi</string>
     <string name="self_phone">Acest telefon</string>
     <string name="settings_backup">Setări de sistem</string>
-    <string name="start_backup_to_micloud">Creare copie de rezervă în Mi Cloud</string>
+    <string name="start_backup_to_micloud">Creare copie de rezervă pentru aplicații în Mi Cloud</string>
     <string name="start_recover">Restabiliţi %s</string>
     <string name="success_open_cloudbackup">A fost activată crearea copiilor de rezervă pentru aplicațiile din ecranul principal</string>
     <string name="wait_icon_download">Se descarcă pictogramele aplicațiilor</string>
