--- a/Romanian/main/ContactsProvider.apk/res/values-ro/strings.xml
+++ b/Romanian/main/ContactsProvider.apk/res/values-ro/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="app_label">Stocarea datelor din Agendă</string>
     <string name="call_log_provider_label">Istoric apeluri</string>
