--- a/Romanian/main/DocumentsUI.apk/res/values-ro/strings.xml
+++ b/Romanian/main/DocumentsUI.apk/res/values-ro/strings.xml
@@ -1,12 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="app_label">Documente</string>
+    <string name="button_copy">Copiați</string>
+    <string name="button_select">Selectați</string>
+    <string name="copy_failure_alert_content">"Aceste fișiere nu au fost copiate: %1$s"</string>
+    <string name="copy_notification_title">Copiere fișiere</string>
+    <string name="copy_preparing">Pregătire pentru copiere…</string>
+    <string name="copy_remaining">%s rămas</string>
     <string name="create_error">Eroare la crearea dosarului</string>
     <string name="drawer_close">Ascundeți directoarele rădăcină</string>
     <string name="drawer_open">Afișați directoarele rădăcină</string>
     <string name="empty">Nu există elemente</string>
     <string name="menu_advanced_hide">Ascunde cardul SD</string>
     <string name="menu_advanced_show">Arată cardul SD</string>
+    <string name="menu_copy">Copiați în…</string>
     <string name="menu_create_dir">Creați un dosar</string>
     <string name="menu_delete">Ștergeți</string>
     <string name="menu_file_size_hide">Ascunde mărimea fișierului</string>
@@ -20,8 +27,9 @@
     <string name="menu_settings">Setări</string>
     <string name="menu_share">Distribuiți</string>
     <string name="menu_sort">Sortați după</string>
-    <string name="mode_selected_count">%1$d selectate</string>
+    <string name="notification_touch_for_details">Atingeți pentru a vedea detaliile</string>
     <string name="query_error">Interogarea referitoare la documente nu a reușit</string>
+    <string name="retry">Reîncercați</string>
     <string name="root_available_bytes">%1$s spațiu liber</string>
     <string name="root_recent">Recente</string>
     <string name="root_type_apps">Alte aplicații</string>
@@ -36,5 +44,5 @@
     <string name="title_open">Deschideți din</string>
     <string name="title_save">Salvați în</string>
     <string name="toast_failed_delete">Unele documente nu au putut fi șterse</string>
-    <string name="toast_no_application">Fișierul nu poate fi deschis</string>
+    <string name="toast_no_application">"Fișierul nu poate fi deschis"</string>
 </resources>
